--- a/2x2CRM.mvc/Web.config
+++ b/2x2CRM.mvc/Web.config
@@ -33,6 +33,14 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
+    <httpProtocol>
+       <customHeaders>
+          <add name="Access-Control-Allow-Origin" value="http://localhost:8080" />
+          <add name="Access-Control-Allow-Credentials" value="true" />
+          <add name="Access-Control-Allow-Methods" value="POST,GET,OPTIONS,PUT,DELETE" />
+          <add name="Access-Control-Allow-Headers" value="Content-Type,Accept,'application/json; charset=utf-8'" />
+       </customHeaders>
+    </httpProtocol>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
